hphp/hack/test/typecheck/subtype_bug_1.php.exp
File "subtype_bug_1.php", line 6, characters 40-41:
Invalid argument (Typing[4110])
File "subtype_bug_1.php", line 5, characters 14-25:
Expected ImmVector<B>
File "subtype_bug_1.php", line 6, characters 15-28:
But got ConstVector<C>
