hphp/hack/test/typecheck/subtype_bug_1.php
<?hh
class B {}
class C extends B {}

function foo(ImmVector<B> $x) {}
function test(ConstVector<C> $x) { foo($x); }
